--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-site: Index Jekyll Theme
+site: Hemal Dias - Portfolio
 
-url: https://index.jekyllthemes.io
+url: https://hemaldias.me
 baseurl: 
 
 collections:
