--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
-  site_title: Index
-  site_tagline: A minimal, fixed sidebar grid portfolio Jekyll theme.
+  site_title: Hemal Dias
+  site_tagline: A collection of featured work from Hemal Dias.
   favicon_image: /images/favicon.png
 
 header_settings:
