--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -23,9 +23,9 @@ grid_settings:
   grid_spacing: 20
 
 contact_settings:
-  form_action: ''
+  form_action: 'https://formspree.io/f/myyowjoq'
   confirmation_url: '/thanks'
-  email_subject: 'Contact form submission'
+  email_subject: 'Contact form submission from Portfolio'
   send_button_text: 'Send Message'
 
 social_settings:
