--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
   site_title: Hemal Dias
-  site_tagline: A collection of featured work from Hemal Dias.
+  site_tagline: A design engineer interested in technology, entrepreneurship and supporting under-represented communities.
   favicon_image: /images/favicon.png
 
 header_settings:
@@ -11,8 +11,6 @@ menu_settings:
   menu_items:
     - title: 'Projects'
       url: '/'
-    - title: 'Blog'
-      url: '/blog/'
     - title: 'About'
       url: '/about'
     - title: 'Contact'
@@ -31,7 +29,7 @@ contact_settings:
 social_settings:
   facebook_url: ''
   twitter_url: ''
-  instagram_url: ''
+  instagram_url: 'https://www.instagram.com/hemal.makes/'
   snapchat_url: ''
   youtube_url: ''
   google-plus_url: ''
@@ -54,11 +52,11 @@ social_settings:
   soundcloud_url: ''
   spotify_url: ''
   bandcamp_url: ''
-  linkedin_url: ''
+  linkedin_url: 'https://www.linkedin.com/in/hemaldias/'
 
 color_settings:
   background_color: '#ffffff'
-  background_alt_color: '#F5F7FA'
+  background_alt_color: 'ffffff'
   text_dark_color: '#2A2F36'
   text_medium_color: '#6C7A89'
   text_light_color: '#ABB7B7'
@@ -70,9 +68,9 @@ color_settings:
   error_color: '#D64541'
 
 font_settings:
-  font_embed: '<link href="https://fonts.googleapis.com/css?family=Montserrat:300,500" rel="stylesheet">'
-  title_font: '"Montserrat", sans-serif'
-  body_font: '"Montserrat", sans-serif'
+  font_embed: '<link href="https://fonts.googleapis.com/css?family=Inter:300,500" rel="stylesheet">'
+  title_font: '"Inter", sans-serif'
+  body_font: '"Inter", sans-serif'
   regular_weight: 300
   bold_weight: 500
   site_title:
