--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,6 +1,6 @@
 basic_settings:
   site_title: Hemal Dias
-  site_tagline: A design engineer interested in technology, entrepreneurship and supporting under-represented communities.
+  site_tagline: A design engineer passionate about technology, entrepreneurship and supporting under-represented communities.
   favicon_image: /images/favicon.png
 
 header_settings:
